# Confidential-Economic-Engine

./: .gitignore  Anchor.toml  CARGO_EDITION2024_FIX.md  Cargo.toml  E2E_TEST_ARCHITECTURE.md  E2E_TEST_GUIDE.md  PHASE_5_COMPLETE.md  README.md  package.json
docs/: INCO_INTEGRATION_GUIDE.md  deploy-ud.md  inco.md
programs/confidential-economic-engine/: Cargo.toml
programs/confidential-economic-engine/src/: lib.rs
tests/: confidential-economic-engine.ts
tests/idl/: inco_token.json
